--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "morgan": "~1.6.1",
     "sails-service-mailer": "^2.0.1",
     "serve-favicon": "~2.3.0",
-    "sprintf-js": "^1.0.3"
+    "sprintf-js": "^1.0.3",
+    "gulp": "^3.9.0",
+    "gulp-image-resize": "^0.6.0"
   }
 }
